book detail collapse  panel fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -281,6 +281,7 @@ svg {
     padding-top: 72px;
     font-size: 0.16em;
     padding-left: 19;
+    color: #307bbb;
   }
 
 
